--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,32 @@
-url: http://blog.loc8.us
-name: 'Jim McAndrew&#039;s Blog'
-description: 'Geography &amp; Technology'
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: loc8.us
+email: jim@loc8.us
+description: > # this means to ignore newlines until "baseurl:"
+  Jim's writings about Information Science.
+  Focused on Geospatial, ETL, statistics, and data visualization
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://localhost:4000" # the base hostname & protocol for your site
+twitter_username: jimmyrocks
+github_username: jimmyrocks
+user_image: "https://pbs.twimg.com/profile_images/727594275949690881/9qKEYfPU.jpg"
+site_logo: ""
+highlighter: pygments
+include: ['_pages']
+
+# Build settings
+markdown: kramdown
+theme: minima
